--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Azeret Mono', monospace;
+  font-family: 'Azeret Mono';
 }
 
 body {
@@ -69,11 +69,14 @@ body {
 .mian_info {
   width: 946px;
   height: 1300px;
-  margin:  auto;
+  margin: auto;
   border-radius: 16px;
-  background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    270deg,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0) 100%
+  );
   margin-top: 50px;
-
 }
 .main_info_are h2 {
   text-align: center;
@@ -132,9 +135,45 @@ body {
   color: rgb(13, 19, 33);
   border-radius: 5px;
   margin-top: 25px;
+  cursor: pointer;
 }
-
 .main_info_card img {
   width: 259.56px;
   height: 217.01px;
+}
+
+/* My Inspiration   are  */
+
+.Inspiration {
+  height: 775px;
+  width: 1140px;
+  text-align: center;
+  border: 1px solid rgba(13, 19, 33, 0.2);
+  border-radius: 16px;
+  margin: 0 auto;
+}
+.Inspiration_caption {
+  margin: 0 auto;
+  text-align: center;
+}
+.Inspiration_caption h3 {
+  font-size: 32px;
+  font-weight: 800;
+  color: rgb(13, 19, 33);
+}
+.Inspiration_caption p {
+  opacity: 0.7;
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+.Inspiration_vedio {
+  margin-top: 20px;
+}
+.Inspiration_vedio iframe {
+  border-radius: 16px;
 }
