--- a/style/style.css
+++ b/style/style.css
@@ -157,9 +157,9 @@ body {
   text-align: center;
 }
 .Inspiration_caption h3 {
+  color: rgb(13, 19, 33);
   font-size: 32px;
   font-weight: 800;
-  color: rgb(13, 19, 33);
 }
 .Inspiration_caption p {
   opacity: 0.7;
@@ -176,4 +176,67 @@ body {
 }
 .Inspiration_vedio iframe {
   border-radius: 16px;
+}
+
+/* My Current Target  */
+.Current_Target {
+  height: 460px;
+}
+.My_target_caption h3 {
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+  font-weight: 800;
+  text-align: center;
+}
+.My_target_caption p {
+  opacity: 0.7;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(13, 19, 33);
+  margin-top: 10px;
+  text-align: center;
+}
+.Current_Target_skills {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  margin: 0 30px;
+  margin-top: 80px;
+}
+.skill {
+  margin-left: 40px;
+}
+.skill h5 {
+  color: rgb(13, 19, 33);
+  font-size: 24px;
+  font-weight: 800;
+  margin-top: 25px;
+}
+.skill p {
+  width: 80%;
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  opacity: 0.7;
+  margin-top: 20px;
+}
+a {
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.html {
+  border-radius: 16px;
+  background: rgba(255, 76, 30, 0.05);
+}
+.css {
+  border-radius: 16px;
+  background: rgba(0, 76, 232, 0.05);
+}
+.js {
+  border-radius: 16px;
+  background: rgba(255, 223, 0, 0.05);
 }
