--- a/style/style.css
+++ b/style/style.css
@@ -221,7 +221,7 @@ body {
   opacity: 0.7;
   margin-top: 20px;
 }
-a {
+.skill a {
   color: rgb(13, 19, 33);
   font-size: 16px;
   font-weight: bold;
@@ -239,4 +239,65 @@ a {
 .js {
   border-radius: 16px;
   background: rgba(255, 223, 0, 0.05);
+}
+/* Support are   */
+.need_Support {
+  background-image:linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)) ,url('../assets/handshake.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 1140px;
+  height: 313px;
+  margin: 0 auto;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nedd_info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.need_Support_caption h2 {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  font-weight: 700;
+}
+.need_Support_caption p {
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  font-weight: 400;
+  opacity: 0.7;
+  margin-top: 10px;
+}
+.need_Support_input
+{
+  margin-top: 50px;
+  display: inline;
+}
+.need_Support_input input {
+  width: 548px;
+  height: 50px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  /* margin-top: 40px; */
+}
+::placeholder {
+  color: rgba(13, 19, 33, 0.4);
+  font-size: 16px;
+  font-weight: 400;
+}
+.need_Support_input button {
+  height: 50px;
+  width: 120px;
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  color: rgb(13, 19, 33);
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
 }
