--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Azeret Mono';
+  list-style: none;
 }
 
 body {
@@ -11,6 +12,27 @@ body {
   max-width: 1440px;
 }
 
+/* header are  */
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 35px 50px;
+}
+.logo a {
+  color: rgb(13, 19, 33);
+  font-size: 28px;
+  font-weight: 700;
+  text-decoration: none;
+}
+.header button {
+  padding: 17px 24px;
+  font-size: 20px;
+  opacity: 0.7;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
 .Hero_are {
   background-image: url(.././assets/Hero-bg.png);
   background-repeat: no-repeat;
@@ -60,10 +82,13 @@ body {
 .main {
   width: 1140px;
   height: 1395px;
-
   margin: 0 auto;
   border-radius: 16px;
-  background: rgba(13, 19, 33, 0.02);
+  background: linear-gradient(
+    90deg,
+    rgb(255, 255, 255),
+    rgba(255, 255, 255, 0) 100%
+  );
   margin-top: 80px;
 }
 .mian_info {
@@ -110,6 +135,7 @@ body {
 }
 .main_caption_text {
   width: 60%;
+  background: #fff;
 }
 .main_caption_text h3 {
   color: rgba(13, 19, 33, 0.7);
@@ -197,15 +223,18 @@ body {
   text-align: center;
 }
 .Current_Target_skills {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px;
   margin: 0 30px;
   margin-top: 80px;
 }
 .skill {
-  margin-left: 40px;
+  /* margin-left: 40px; */
+  padding: 25px;
 }
 .skill h5 {
   color: rgb(13, 19, 33);
@@ -254,6 +283,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 25px;
 }
 .nedd_info {
   display: flex;
@@ -317,8 +347,7 @@ footer {
   font-size: 20px;
   font-weight: 600;
 }
-.footer_logo
-{
+.footer_logo {
   display: flex;
   gap: 30px;
 }
